--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1659,6 +1659,27 @@
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/appwidget_info" />
         </receiver>
 
+        <!-- Notification Shortcuts -->
+
+        <activity android:name="Settings$NotificationShortcutsSettingsActivity"
+                android:label="@string/notification_shortcuts_settings_title"
+                android:clearTaskOnLaunch="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="com.android.settings.notificationshortcut.NOTIFICATION_SHORTCUTS" />
+                <action android:name="android.settings.notificationshortcut.NOTIFICATION_SHORTCUTS" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.VOICE_LAUNCH" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+android:value="com.android.settings.notificationshortcut.NotificationShortcuts" />
+            <meta-data android:name="com.android.settings.TOP_LEVEL_HEADER_ID"
+                android:resource="@id/liquid_notification_shortcuts" />
+        </activity>
+
+        <activity android:name="net.margaritov.preference.colorpicker" />
+
         <receiver android:name=".bluetooth.BluetoothDiscoverableTimeoutReceiver">
             <intent-filter>
                 <action android:name="android.bluetooth.intent.DISCOVERABLE_TIMEOUT" />
