--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1462,6 +1462,8 @@
             android:launchMode="singleTop"
             android:theme="@style/CryptKeeperBlankTheme"
         />
+        
+        <activity android:name=".beerbong.Settings" />
 
         <!-- CyanogenMod activities Start -->
         <activity android:name=".cyanogenmod.PowerWidget" />
