Settings: Specify the WiFi network priority
AOSP has a basic LRU priority for Wi-Fi networks (last connected has more priority).
This changes added the ability of graphically set the priority of any of the configured

This change also introduce new ASS WiFi settings

Wifi country code moved from General to ASS WiFi settings

Thanks a bunch for the idea to Jorge Ruesga

Patchset 2:
- cleanup

Change-Id: I462a99e4668136be1d288bb7ffb19add177c0c76
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	AndroidManifest.xml
	res/values/strings.xml
	res/xml/interface_settings.xml
	res/xml/user_interface_settings.xml
	src/com/android/settings/slim/UserInterface.java

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1461,6 +1461,8 @@
         <!-- CyanogenMod activities Start -->
         <activity android:name=".cyanogenmod.PowerWidget" />
 
+        <activity android:name=".cyanogenmod.WifiSettings" />
+
         <activity android:name=".cyanogenmod.SystemSettings" />
 
         <activity android:name=".cyanogenmod.PerformanceSettings" />
