Settings: Recents RAM bar (2/2)
due that the old rambar was resource consuming and as the settings rambar not really
right in showing the truth of real RAM usage in android, I decided to go new ways.

This commit changes our rambar (or better add a total new one) in following points:

- we do not use any longer ther permanent observed RunningState machine
- instead we read out /proc/meminfo (thanks steven for that idea)
- rambar shows now the real memory usage
- ppl have the possibility to show applications, cache and other ram usage as they like
- deeper explanations I add how android mem managment works.
- color picker for all rambar states
- reset to default
- updates only on actions on recents so that it is making sense
- and a lot other

cheers

Change-Id: I6f79c253f6884dffc8bcb5e1b52421143f91e02d
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	AndroidManifest.xml
	res/xml/user_interface_settings.xml
	src/com/android/settings/Settings.java
	src/com/android/settings/slim/UserInterface.java

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1535,6 +1535,7 @@
 	<activity android:name=".cyanogenmod.StatusBar" />
         <activity android:name=".cyanogenmod.StatusBarClockStyle" />
 	<activity android:name=".cyanogenmod.NotificationDrawerStyle" />
+	<activity android:name=".cyanogenmod.RamBar" />
 
         <activity
             android:name=".cyanogenmod.DensityChanger"
@@ -1542,6 +1543,16 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
+        </activity>
+
+        <activity android:name="Settings$ASSRamBarActivity"
+                android:label="@string/ram_bar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.slim.RamBar" />
         </activity>
 
         <activity android:name=".profiles.NFCProfile"
