--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1558,6 +1558,7 @@
         <activity android:name=".cyanogenmod.StatusBarClockStyle" />
 	<activity android:name=".cyanogenmod.NotificationDrawerStyle" />
 	<activity android:name=".cyanogenmod.RamBar" />
+	<activity android:name=".cyanogenmod.StatusBarStyle" />
 
         <activity
             android:name=".cyanogenmod.DensityChanger"
