Add option to control scroll friction and velocity. Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1525,6 +1525,8 @@
 
         <activity android:name=".cyanogenmod.StatusBarBatteryStyle" />
 
+        <activity android:name=".cyanogenmod.Scroller" />
+
         <activity android:name=".cyanogenmod.NavbarSettings" />
         <activity android:name=".cyanogenmod.NavRingTargets" />
         <activity android:name=".cyanogenmod.NavbarButtonSettings" />
