Settings: Transparent navbar and more (2/2)
This commit introduces transparent navigation bar. Also colorizing method
changed.

- custom transparency
- custom color
- custom transparency mode (linked with statusbar transparency mode)
  0 = launcher, 1 = launcher and lockscreen, 2 = always
- Settings fits now with new functions

cheers

Change-Id: Icd1ef42ad461cb01b7a5964c4f5ccc7debb81b64
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	AndroidManifest.xml
	res/values/strings.xml
	res/xml/navbar_style_dimen_settings.xml
	src/com/android/settings/cyanogenmod/NavbarStyleDimenSettings.java

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1559,6 +1559,7 @@
 	<activity android:name=".cyanogenmod.NotificationDrawerStyle" />
 	<activity android:name=".cyanogenmod.RamBar" />
 	<activity android:name=".cyanogenmod.StatusBarStyle" />
+	<activity android:name=".cyanogenmod.NavBarStyle" />
 
         <activity
             android:name=".cyanogenmod.DensityChanger"
