Settings: Navigation bar button color mode (2/2)
due some user complains about the bad coloring of custom and app icons, a fix
became a feature.

- overworked colorizing more icon specific
- introduce color mode (0 = all icons, 1 = only system icons, 2 = system and custom icons)
- change porterduff mode for app and custom icons....now a lot better for most icons
- changed in settings to fit the other structure

cheers

Change-Id: I51847db228f1ff70e9b75201eec78c25f284a4f6
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	AndroidManifest.xml
	res/values/strings.xml
	res/xml/navbar_style_dimen_settings.xml

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1560,6 +1560,7 @@
 	<activity android:name=".cyanogenmod.RamBar" />
 	<activity android:name=".cyanogenmod.StatusBarStyle" />
 	<activity android:name=".cyanogenmod.NavBarStyle" />
+	<activity android:name=".cyanogenmod.NavBarButtonStyle" />
 
         <activity
             android:name=".cyanogenmod.DensityChanger"
