lock screen shortcuts (PA style)
Change-Id: I0a5197b09287606563ef2a0555624f1c68c69420
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	res/values/arrays.xml
	res/values/strings.xml
	res/xml/prefs_lockscreen.xml

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1657,6 +1657,16 @@
                 <action android:name="android.provider.Contacts.PROFILE_CHANGED" />
             </intent-filter>
         </receiver>
+        
+        <activity
+             android:name=".shortcuts.Shortcuts"
+             android:label="Lockscreen Shortcuts" >
+             <intent-filter>
+                 <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="com.android.settings.SHORTCUT" />
+             </intent-filter>
+        </activity>
 
     </application>
 </manifest>
