--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1585,6 +1585,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".notificationlight.NotificationLightSettings" />
+
+        <activity android:name=".notificationlight.BatteryLightSettings" />
 
 	<activity android:name=".cyanogenmod.KeyboardInputSettings" />
 
