--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1629,6 +1629,8 @@
                 android:resource="@id/display_settings" />
         </activity>
 
+        <activity android:name=".beerbong.HybridSettings" />
+
         <receiver android:name=".widget.SettingsAppWidgetProvider"
                 android:label="@string/gadget_title"
                 android:exported="true"
