--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1561,6 +1561,8 @@
 	<activity android:name=".cyanogenmod.StatusBarStyle" />
 	<activity android:name=".cyanogenmod.NavBarStyle" />
 	<activity android:name=".cyanogenmod.NavBarButtonStyle" />
+	<activity android:name=".cyanogenmod.Pie" />
+        <activity android:name=".cyanogenmod.PieColor" />
 
         <activity
             android:name=".cyanogenmod.DensityChanger"
