Settings: Extended QS style options (2/2)
Following features are introduced:
- set up tiles per row (3,4,5)
- option to duplicate tiles per row in landscape
- set up tiles bg color
- set up tiles bg pressed color
- set up tiles text color

Thanks AOKP and Evolution rom for the idea of tiles per row.
Compared to other solutions we changed the code in that way
that no other observers are needed, no systemUI restarts,
a better landscape view and some minor code changes
so as usual another slimed new unique SlimBean feature

cheers

Change-Id: I8befbd992bb582b13c3c3f9cf26d38972a81b1d0
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	AndroidManifest.xml
	res/values/arrays.xml
	src/com/android/settings/cyanogenmod/QuickSettingsTiles.java

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1563,6 +1563,7 @@
 	<activity android:name=".cyanogenmod.NavBarButtonStyle" />
 	<activity android:name=".cyanogenmod.Pie" />
         <activity android:name=".cyanogenmod.PieColor" />
+	<activity android:name=".cyanogenmod.quicksettings.QuickSettingsTilesStyle" />
 
         <activity
             android:name=".cyanogenmod.DensityChanger"
