--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -102,10 +102,9 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/superuser"
             android:launchMode="singleTask"
-            android:excludeFromRecents="true"
+            android:noHistory="true"
             android:permission="android.permission.REQUEST_SUPERUSER"
             android:process=":superuser"
-            android:taskAffinity="com.android.settings"
             android:theme="@style/RequestThemeDark" />
         <!-- Only system/su can open this activity -->
         <!-- This is activity is started in multiuser mode when the user invoking su -->
@@ -115,7 +114,7 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/superuser"
             android:launchMode="singleTask"
-            android:excludeFromRecents="true"
+            android:noHistory="true"
             android:permission="android.permission.REQUEST_SUPERUSER"
             android:process=":superuser"
             android:theme="@style/RequestThemeDark" />
@@ -124,11 +123,9 @@
         <activity
             android:name="com.koushikdutta.superuser.MultitaskSuRequestActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:excludeFromRecents="true"
             android:exported="false"
             android:label="@string/request"
             android:process=":superuser"
-            android:taskAffinity="com.android.settings"
             android:theme="@style/RequestThemeDark" />
 
         <receiver
