--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -104,8 +104,7 @@
             android:launchMode="singleTask"
             android:noHistory="true"
             android:permission="android.permission.REQUEST_SUPERUSER"
-            android:process=":superuser"
-            android:theme="@style/RequestThemeDark" />
+            android:theme="@style/RequestTheme" />
         <!-- Only system/su can open this activity -->
         <!-- This is activity is started in multiuser mode when the user invoking su -->
         <!-- is not the device owner (user id 0). -->
@@ -116,8 +115,7 @@
             android:launchMode="singleTask"
             android:noHistory="true"
             android:permission="android.permission.REQUEST_SUPERUSER"
-            android:process=":superuser"
-            android:theme="@style/RequestThemeDark" />
+            android:theme="@style/RequestTheme" />
 
         <!-- Multiple instances of this activity can be running for multiple su requests -->
         <activity
@@ -125,8 +123,7 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="false"
             android:label="@string/request"
-            android:process=":superuser"
-            android:theme="@style/RequestThemeDark" />
+            android:theme="@style/RequestTheme" />
 
         <receiver
             android:name="com.koushikdutta.superuser.SuReceiver"
