--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1663,6 +1663,8 @@
 
 	<activity android:name=".cyanogenmod.KeyboardInputSettings" />
 
+	<activity android:name=".beanstalk.About" />
+
         <activity android:name=".ApnEditor" />
 
         <!-- CyanogenMod activities End -->
