Settings: Add Widgets viewpager for all devices (1/2)
First thanks AOKP for the basic idea and some parts of code.
This commit gives the ability to show up a viewpager with
custom user set widgets. It is bindable to navbar, navring
and to hardwarekeyboards. It works with navbar enabled as
well as with navbar disabled. Like every time we polished it
Slimusual a bit up.

Change to the original widgets viewpager
- bindable also over hardwarebuttons
- shows also up without navbar
- color settings for background and text
- transparency of background (default 25%)
- settings complete overwork
- TRDS compatible
- multiDPpi (thanks mnazim)
- complete overwork of widget height handling
- slimup and a lot improvements and fixes

cheers

Change-Id: I234df849603f87312996db77548031354a977561
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	AndroidManifest.xml
	res/values/arrays.xml
	res/values/strings.xml
	res/xml/interface_settings.xml

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1623,6 +1623,9 @@
         <activity android:name=".cyanogenmod.StatusBarClockStyle" />
 	<activity android:name=".cyanogenmod.NotificationDrawerStyle" />
 	<activity android:name=".cyanogenmod.RamBar" />
+	<activity android:name=".cyanogenmod.WidgetsConfiguration" />
+        <activity android:name=".cyanogenmod.WidgetsSettings" />
+        <activity android:name=".cyanogenmod.WidgetsStyle" /> 
 	<activity android:name=".cyanogenmod.StatusBarStyle" />
 	<activity android:name=".cyanogenmod.NavBarStyle" />
 	<activity android:name=".cyanogenmod.NavBarButtonStyle" />
