Multiple commits for app sidebar support from ChameleonOS Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: Ib0645179962c405a73e9137ffae103cb9838e3fc

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1702,6 +1702,8 @@
 
 	<activity android:name=".cyanogenmod.KeyboardInputSettings" />
 
+	<activity android:name=".beanstalk.ExcludedAppsActivity" />
+
 	<activity android:name=".beanstalk.About" />
 
         <activity android:name=".ApnEditor" />
