--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1608,6 +1608,8 @@
 
         <activity android:name=".profiles.ProfileGroupConfig" />
 
+        <activity android:name=".profiles.WifiTriggers" />
+
         <activity android:name=".util.ShowBuildProp" /> 
 
         <activity android:name=".profiles.NFCProfileWriter" />
