--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -64,6 +64,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.SET_TIME" />
     <uses-permission android:name="android.permission.CHANGE_PRIVACY_GUARD_STATE" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <permission
         android:name="android.permission.REQUEST_SUPERUSER"
@@ -179,6 +181,21 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <!-- QuietHours AutoSMS -->
+
+        <service android:name=".beanstalk.autosms.AutoSmsService" />
+
+        <receiver
+            android:name=".beanstalk.autosms.AlarmReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.TIMEZONE_CHANGED"></action>
+                <action android:name="android.intent.action.TIME_CHANGED"></action>
+                <action android:name="android.intent.action.DATE_CHANGED"></action>
+                <action android:name="com.android.settings.beanstalk.autosms.START_SMS_SERVICE" />
+                <action android:name="com.android.settings.beanstalk.autosms.STOP_SMS_SERVICE"  />
+            </intent-filter>
+        </receiver>
 
         <!-- Wireless Controls -->
 
