--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1631,6 +1631,10 @@
 
         <activity android:name=".cyanogenmod.SystemSettings" />
 
+        <activity android:name=".cyanogenmod.AutoBrightnessSetup"
+                android:excludeFromRecents="true"
+                android:theme="@*android:style/Theme.Holo.Dialog.Alert" />
+
         <activity android:name=".cyanogenmod.PerformanceSettings" />
 
         <activity android:name="Settings$QuietHoursSettingsActivity"
