Settings: Long Term Orbits (LTO)
Patchset 2: Opt-In LtoService (if device supports LTO) and simplify the code
            Rebased
Patchset 3: Added LocationSettings suggestions
            Rebased

Require http://review.cyanogenmod.org/#/c/51421

Change-Id: I878104eb3c859168faa10467fab3772a2f639288
Signed-off-by: Jorge Ruesga <jorge@ruesga.com>
Signed-off-by: scott <scott@ubuntu.com>

Conflicts:
	res/values/cm_strings.xml
	res/xml/location_settings.xml
	src/com/android/settings/LocationSettings.java
	src/com/android/settings/cyanogenmod/BootReceiver.java

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1986,5 +1986,12 @@ android:value="com.android.settings.notificationshortcut.NotificationShortcuts" 
              </intent-filter>
         </activity>
 
+        <!-- Lto Service -->
+        <service android:label="LtoService"
+            android:enabled="true"
+            android:exported="false"
+            android:name=".cyanogenmod.LtoService">
+        </service>
+
     </application>
 </manifest>
